update spring boot version to 3.5.0 and refactor file path handling