@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import org.springframework.beans.BeanUtils;
@@ -55,7 +54,7 @@ public class MaincategoryService {
      // save file Method
      private String saveFile(MultipartFile file) throws IOException {
           String fileName = System.currentTimeMillis() + "_" + file.getOriginalFilename();
-          Path filePath = Paths.get(uploadDir, fileName);
+          Path filePath = Path.of(uploadDir, fileName);
           Files.write(filePath, file.getBytes());
           return "/uploads/maincategories/" + fileName;
      }
@@ -112,7 +111,7 @@ public class MaincategoryService {
      // Helper method to delete a file by its path
      private void deleteFile(String filePath) {
           try {
-               Path path = Paths.get(uploadDir, new File(filePath).getName());
+               Path path = Path.of(uploadDir, new File(filePath).getName());
                Files.deleteIfExists(path);
           } catch (IOException e) {
                System.err.println("Error deleting file: " + filePath + " - " + e.getMessage());
